Fix seller route end-points. Add transaction ver1.0

--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -23,7 +23,7 @@
                 <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm yêu thích</a>
                 <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm đang đấu giá</a>
                 <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm thắng đấu giá</a>
-                <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm đã đăng</a>
+                <a class="list-group-item list-group-item-action" href="/account/selling">Danh sách sản phẩm đang đăng bán</a>
                 <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm đã có người thắng đấu giá</a>
             </div>
         </div>
