--- a/views/vwSeller/update_description.handlebars
+++ b/views/vwSeller/update_description.handlebars
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="card-footer d-flex justify-content-end">
-                <a class="btn btn-outline-secondary me-3" href="#" role="button">Quay về</a>
+                <a class="btn btn-outline-secondary me-3" href="/account/selling" role="button">Quay về</a>
                 <button type="submit" class="btn btn-primary">
                     Cập nhật
                 </button>
