--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,9 @@
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="/account/profile">Xem profile</a></li>
+                                    {{#if (eqString currentUser.role 'seller')}}
+                                    <li><a class="dropdown-item" href="/{{currentUser.user_id}}/add">Đăng sản phẩm mới</a></li>  
+                                    {{/if}}
                                     <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
                                 </ul>
                             </div>
