--- a/views/vwBidder/bid_history.handlebars
+++ b/views/vwBidder/bid_history.handlebars
@@ -1,7 +1,7 @@
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="fw-bold">Lịch sử đấu giá</h1>
-        <a href="/product/details/{{product.product_id}}" class="btn btn-secondary">
+        <a href="{{previousPage}}" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Quay lại
         </a>
     </div>
