Add selling products and products with bid won in profile view. Fix created_at time format in related files. Fix missing updating rating in users table when submitting comments in transaction page.

--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -13,21 +13,21 @@
 <body>
     <header class="bg-secondary-subtle d-flex justify-content-between p-3 mb-3">
         <h2 class="fw-semibold">Quản lý hồ sơ cá nhân</h2>
-        <a id="backNav" onclick="history.back()" class="btn btn-primary" role="button">Quay về</a>
+        <a href="/" class="btn btn-primary" role="button"><i class="bi bi-arrow-left"></i> Quay về trang chủ</a>
     </header>
     <main class="container-fluid row">
         <div class="col-md-3">
             <div class="list-group mb-3">
-                <a class="list-group-item list-group-item-action active" aria-current="true" href="/account/profile">Cập nhật thông tin cá nhân</a>
+                <a class="list-group-item list-group-item-action" href="/account/profile">Cập nhật thông tin cá nhân</a>
                 <a class="list-group-item list-group-item-action" href="/account/ratings">Xem đánh giá</a>
                 <a class="list-group-item list-group-item-action" href="/account/watchlist">Danh sách sản phẩm yêu thích</a>
                 <a class="list-group-item list-group-item-action" href="/account/bidding">Danh sách sản phẩm đang đấu giá</a>
                 <a class="list-group-item list-group-item-action" href="/account/won">Danh sách sản phẩm thắng đấu giá</a>
-                {{#if (not (eqString currentUser.role 'seller'))}}
+                {{#unless (eqString currentUser.role 'seller')}}
                 <a class="list-group-item list-group-item-action" href="/account/upgrade-request">Xin cấp quyền thành seller</a>
-                {{/if}}
+                {{/unless}}
                 <a class="list-group-item list-group-item-action" href="/account/selling">Danh sách sản phẩm đang đăng bán</a>
-                <a class="list-group-item list-group-item-action" href="#">Danh sách sản phẩm đã có người thắng đấu giá</a>
+                <a class="list-group-item list-group-item-action" href="/account/transactions">Danh sách sản phẩm đã có người thắng đấu giá</a>
             </div>
         </div>
         <div class="col-md-9">
@@ -41,7 +41,12 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script>
-        document.querySelector('#backNav').setAttribute('href', document.referrer);
+        const cur_page = location.href;
+        document.querySelectorAll('.list-group-item').forEach(item => {
+            if (item.href === cur_page) {
+                item.classList.add('active');
+            }
+        });
     </script>
     {{{_sections.script}}}
 </body>
