--- a/views/vwProfile/won.handlebars
+++ b/views/vwProfile/won.handlebars
@@ -27,7 +27,7 @@
                         <i class="bi bi-hammer"></i> Tổng lượt đấu giá: {{bid_count}}
                     </small>
                 </p>
-                <a href="/product/details/{{product_id}}" class="btn btn-primary btn-sm w-100">
+                <a href="/transaction/{{product_id}}" class="btn btn-primary btn-sm w-100">
                     <i class="bi bi-eye"></i> Xem chi tiết
                 </a>
             </div>
