--- a/views/vwProfile/selling_products.handlebars
+++ b/views/vwProfile/selling_products.handlebars
@@ -1,3 +1,6 @@
+<h3 class="mb-3">Danh sách sản phẩm đang đăng bán</h3>
+
+{{#if products}}
 <div class="table-responsive" style="max-height: 1000px;">
     <table class="table table-bordered">
         <thead>
@@ -9,10 +12,10 @@
         <tbody>
             {{#each products}}
             <tr>
-                <td class="text-center">{{inc @index}}</td>
+                <td class="text-center fw-semibold">{{inc @index}}</td>
                 <td class="navbar navbar-expand-lg">
                     <div class="container-md">
-                        <h5 class="navbar-brand">{{product_name}}</h5>
+                        <p class="">{{product_name}}</p>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -34,4 +37,15 @@
             {{/each}}
         </tbody>
     </table>
+</div>    
+{{else}}
+<div class="alert alert-info text-center">
+    <p class="mt-3">Bạn chưa đăng bán sản phẩm nào</p>
+    {{#if (eqString currentUser.role 'seller')}}
+    <a href="/{{currentUser.user_id}}/add" class="btn btn-primary">Bắt đầu bán sản phẩm</a>
+    {{else}}
+    <a href="/account/upgrade-request">Nâng cấp tài khoản</a>
+    {{/if}}
+    
 </div>
+{{/if}}
